[++] initial web version

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,36 @@
 {
-  "name": "HelloIonic",
-  "private": "true",
-  "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.6"
+  "name": "audiowalk",
+  "version": "0.1.0",
+  "description": "Yet another amazing AngularJS app",
+  "keywords": [
+    "angular"
+  ],
+  "homepage": "https://github.com/lennart/audiowalk",
+  "bugs": "https://github.com/lennart/audiowalk/issues",
+  "author": {
+    "name": "Lennart Melzer",
+    "email": "",
+    "url": "https://github.com/lennart"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lennart/audiowalk.git"
+  },
+  "licenses": [
+    {
+      "type": "MIT"
+    }
+  ],
+  "dependencies": {
+    "bootstrap": "3.1.1",
+    "font-awesome": "4.1.0",
+    "angular-strap": "2.0.3",
+    "angular-motion": "0.3.2",
+    "angular-animate": "^1.3.0-beta.11",
+    "angular-route": "^1.3.0-beta.11",
+    "angular-touch": "^1.3.0-beta.11",
+    "angular": "^1.3.0-beta.11",
+    "angular-fitvids": "https://github.com/jimmyhillis/angular-fitvids.git#~0.1.0",
+    "angular-slick": "https://github.com/vasyabigi/angular-slick.git#~0.1.9"
   }
 }
