--- a/package.json
+++ b/package.json
@@ -1,17 +1,49 @@
 {
-  "name": "ionic-project",
-  "version": "1.0.0",
-  "description": "An Ionic project",
-  "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-sass": "^0.7.1",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+  "name": "audiowalk",
+  "version": "0.1.0",
+  "description": "Yet another amazing AngularJS app",
+  "keywords": [
+    "angular"
+  ],
+  "homepage": "https://github.com/lennart/audiowalk",
+  "bugs": "https://github.com/lennart/audiowalk/issues",
+  "author": {
+    "name": "Lennart Melzer",
+    "email": "",
+    "url": "https://github.com/lennart"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lennart/audiowalk.git"
+  },
+  "licenses": [
+    {
+      "type": "MIT"
+    }
+  ],
+  "dependencies": {},
   "devDependencies": {
-    "bower": "^1.3.3",
+    "gulp": "^3.6.2",
+    "gulp-autoprefixer": "0.0.7",
+    "gulp-changed": "^0.3.0",
+    "gulp-clean": "^0.2.4",
+    "gulp-cleancss": "^0.2.1",
+    "gulp-concat-util": "^0.2.2",
+    "gulp-connect": "^2.0.5",
+    "gulp-htmlmin": "^0.1.2",
+    "gulp-jshint": "^1.5.5",
+    "gulp-less": "^1.2.3",
+    "gulp-nginclude": "^0.4.3",
+    "gulp-ngmin": "^0.3.0",
+    "gulp-ngtemplate": "^0.2.1",
+    "gulp-open": "^0.2.8",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^0.2.1",
+    "gulp-usemin": "^0.3.3",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "gulp-watch": "^0.6.4",
+    "jshint-stylish": "^0.2.0",
+    "through2": "^0.4.1",
+    "wiredep": "^1.4.4"
   }
 }
