--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "angular-touch": "^1.3.0-beta.11",
     "angular": "^1.3.0-beta.11",
     "angular-fitvids": "https://github.com/jimmyhillis/angular-fitvids.git#~0.1.0",
-    "angular-slick": "https://github.com/vasyabigi/angular-slick.git#~0.1.9"
+    "angular-slick": "https://github.com/vasyabigi/angular-slick.git#~0.1.9",
+    "angular-spinner": "~0.5.0"
   }
 }
