--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "angular": "^1.3.0-beta.11",
     "angular-fitvids": "https://github.com/jimmyhillis/angular-fitvids.git#~0.1.0",
     "angular-slick": "https://github.com/vasyabigi/angular-slick.git#~0.1.9",
-    "angular-spinner": "~0.5.0"
+    "angular-spinner": "~0.5.0",
+    "angular-scroll": "~0.5.7"
   }
 }
