--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,8 @@
     "angular-fitvids": "https://github.com/jimmyhillis/angular-fitvids.git#~0.1.0",
     "angular-slick": "https://github.com/vasyabigi/angular-slick.git#~0.1.9",
     "angular-spinner": "~0.5.0",
-    "angular-scroll": "~0.5.7"
+    "angular-scroll": "~0.5.7",
+    "angular-fullscreen": "*",
+    "angular-google-maps": "~1.1.1"
   }
 }
