--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,7 @@
     "angular-fullscreen": "*",
     "angular-google-maps": "~1.1.1",
     "angular-slick": "~0.1.9",
-    "angular-sanitize": "~1.2.18"
+    "angular-sanitize": "~1.2.18",
+    "angular-media-player": "~0.5.5"
   }
 }
