--- a/bower.json
+++ b/bower.json
@@ -37,6 +37,7 @@
     "angular-google-maps": "~1.1.1",
     "angular-slick": "~0.1.9",
     "angular-sanitize": "~1.2.18",
-    "angular-media-player": "~0.5.5"
+    "angular-media-player": "~0.5.5",
+    "angular-loading-bar": "~0.4.3"
   }
 }
