--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,6 @@
     "bootstrap": "3.1.1",
     "font-awesome": "4.1.0",
     "angular-strap": "2.0.3",
-    "angular-motion": "0.3.2",
     "angular-animate": "^1.3.0-beta.11",
     "angular-route": "^1.3.0-beta.11",
     "angular-touch": "^1.3.0-beta.11",
@@ -35,10 +34,10 @@
     "angular-scroll": "~0.5.7",
     "angular-fullscreen": "*",
     "angular-google-maps": "~1.1.1",
-    "angular-slick": "~0.1.9",
     "angular-sanitize": "~1.2.18",
     "angular-media-player": "~0.5.5",
     "angular-loading-bar": "~0.4.3",
-    "pointerevents-polyfill": "~0.2.0"
+    "pointerevents-polyfill": "~0.2.0",
+    "jquery": "~2.1.1"
   }
 }
